# src

./: README.md
install/: local_setup.sh  setup.sh
install/spherebot_control/lib/spherebot_control/: odom_fixer  safety_stop
install/spherebot_control/share/spherebot_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/spherebot_control/share/spherebot_control/config/: controllers.yaml  ekf.yaml
install/spherebot_control/share/spherebot_control/launch/: sim.launch.py
install/spherebot_description/share/spherebot_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/spherebot_gazebo/share/spherebot_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/spherebot_navigation/lib/spherebot_navigation/: go_to_pen  mission_control  vision_detector
install/spherebot_slam/share/spherebot_slam/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/spherebot_slam/share/spherebot_slam/config/: mapper_params_online_async.yaml
install/spherebot_teleop/lib/spherebot_teleop/: keyboard
log/: latest_build
spherebot_control/: setup.cfg  setup.py
spherebot_control/config/: controllers.yaml  ekf.yaml
spherebot_control/launch/: sim.launch.py
spherebot_control/spherebot_control/: safety_stop.py
spherebot_description/: package.xml  setup.cfg  setup.py
spherebot_description/launch/: display.launch.py
spherebot_description/urdf/: spherebot.urdf  spherebot.urdf.xacro
spherebot_gazebo/: package.xml  setup.cfg  setup.py
spherebot_gazebo/launch/: spherebot_sim.launch.py
spherebot_gazebo/worlds/: assessment_world.sdf
spherebot_navigation/: package.xml  setup.cfg  setup.py
spherebot_navigation/config/: nav2_params.yaml
spherebot_navigation/launch/: go_to_pen.launch.py  navigation.launch.py
spherebot_navigation/spherebot_navigation/: go_to_pen.py  mission_control.py  vision_detector.py
spherebot_slam/: setup.cfg  setup.py
spherebot_slam/config/: mapper_params_online_async.yaml
spherebot_slam/launch/: slam.launch.py
spherebot_slam/maps/: assessment_map.yaml
spherebot_teleop/: setup.cfg  setup.py
spherebot_teleop/spherebot_teleop/: keyboard_teleop.py
(+21 files in other folders)
