<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spherebot_control</name>
  <version>0.0.0</version>
  <description>Control configuration for spherebot</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Build Dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Execution Dependencies -->
  <exec_depend>spherebot_description</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>