<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spherebot_slam</name>
  <version>0.0.0</version>
  <description>SLAM configuration for spherebot</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- THE CRITICAL LINE -->
  <exec_depend>slam_toolbox</exec_depend>
  
  <!-- Useful dependencies for mapping -->
  <exec_depend>rviz2</exec_depend>           <!-- Visualizing the map -->
  <exec_depend>nav2_map_server</exec_depend> <!-- Saving the map -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>